# mfbatch

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pylint.yml  python-publish.yml
mfbatch/: __main__.py  commands.py  metaflac.py  util.py
test_audio/: tone1.flac  tone2.flac  tone3.flac
tests/: __init__.py
