[tool.poetry]
name = "mfbatch"
version = "0.1.0"
description = "MetaFlac batch editor"
authors = ["Jamie Hardt <jamiehardt@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.66.4"
anyreadline = "^0.1.1"

[tool.poetry.scripts]
mfbatch = 'mfbatch.__main__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
